--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>lawyd - look at what you do(ne)</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/lawyd.css" rel="stylesheet" />
+
+    <link rel="icon" href="img/logo.png" type="image/vnd.microsoft.icon">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,10 +22,47 @@
 </head>
 <body>
 
-  <img
-
   <div class="container">
-    <p>Welcome back! So nice to see you today.</p>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-left" href="#"><img src="img/logo.png" class="logo" /></a>
+          <a class="navbar-brand" href="#">&nbsp;lawyd</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+
+        </div><!--/.nav-collapse -->
+      </div><!--/.container-fluid -->
+    </nav>
+
+
+    <div class="alert alert-info" role="alert">
+      <strong>Welcome back!</strong> So nice to see you today
+    </div>
+
+    <p>
+      <h3 id="about">About</h3>
+      <p>Working off a nasty and long todo list. Nobody likes it.
+        It's not rewarding and at the end of the day there are still too many
+        things left open. That why we try to make it more pleasent,
+        by not making the things simply disapear, but rather collecting them in
+        a separate list. Besides the usual long list of open things,
+        there is a list of things you have done to show you how awesome you are
+        and how much you have rocked today.
+      </p>
+    </p>
+
   </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
