--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,69 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>lawyd - look at what you do(ne)</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>lawyd - look at what you do(ne)</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/lawyd.css" rel="stylesheet" />
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/lawyd.css" rel="stylesheet"/>
 
-    <link rel="icon" href="img/logo.png" type="image/vnd.microsoft.icon">
+  <link rel="icon" href="img/logo.png" type="image/vnd.microsoft.icon">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
 
-  <div class="container">
+<div class="container">
 
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-left" href="#"><img src="img/logo.png" class="logo" /></a>
-          <a class="navbar-brand" href="#">&nbsp;lawyd</a>
+  <nav class="navbar navbar-default navbar-lawyd" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <img src="img/logo.png" class="logo"/>
+        <div class="navbar-brand" href="#">
+          <div class="lawyd-header">lawyd</div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-          </ul>
-
-        </div><!--/.nav-collapse -->
-      </div><!--/.container-fluid -->
-    </nav>
-
-
-    <div class="alert alert-info" role="alert">
-      <strong>Welcome back!</strong> So nice to see you today
+      </div>
+      <div id="navbar" class="navbar-collapse collapse ">
+        <ul class="nav navbar-nav navbar-left">
+          <li><a href="#do-list">Do list</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#about">About</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <p>
-      <h3 id="about">About</h3>
-      <p>Working off a nasty and long todo list. Nobody likes it.
-        It's not rewarding and at the end of the day there are still too many
-        things left open. That why we try to make it more pleasent,
-        by not making the things simply disapear, but rather collecting them in
-        a separate list. Besides the usual long list of open things,
-        there is a list of things you have done to show you how awesome you are
-        and how much you have rocked today.
-      </p>
-    </p>
-
+  <div id="do-list">
+    <h3>Do list <small>Things you need to do</small></h3>
+    <div class="list-group">
+      <div class="list-group-item">Todo 1
+        <a role="button" href="#"><span class="glyphicon glyphicon-ok pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-trash pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-pencil pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+      </div>
+      <div class="list-group-item">Todo 2
+        <a role="button" href="#"><span class="glyphicon glyphicon-ok pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-trash pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-pencil pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+      </div>
+      <div class="list-group-item">Todo 3
+        <a role="button" href="#"><span class="glyphicon glyphicon-ok pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-trash pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-pencil pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+      </div>
+      <div class="list-group-item">Todo 4
+        <a role="button" href="#"><span class="glyphicon glyphicon-ok pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-trash pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-pencil pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+      </div>
+      <div class="list-group-item">Todo 5
+        <a role="button" href="#"><span class="glyphicon glyphicon-ok pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-trash pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+        <a role="button" href="#"><span class="glyphicon glyphicon-pencil pull-right todo-action"
+                                        aria-hidden="true"></span></a>
+      </div>
+    </div>
   </div>
+
+  <form>
+    <div class="form-group" id="new-todo-form">
+      <input type="text" class="form-control" id="todo-name" placeholder="My new thing to do"/>
+      <button type="submit" class="btn btn-default">Add <span
+          class="glyphicon glyphicon-plus pull-right todo-action"></span></button>
+    </div>
+  </form>
+
+  <p>
+  <h3 id="about">About</h3>
+  <p>Working off a nasty, long todo list. Nobody likes it.
+    It's not rewarding and at the end of the day there are still too many
+    things left open. That why we try to make it more pleasent,
+    by not making the things simply disapear, but rather collecting them in
+    a separate list. Besides the usual long list of open things,
+    there is a list of things you have done to show you how awesome you are
+    and how much you have rocked today.
+  </p>
+  </p>
+
+</div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
